fix: apply overflow hidden to prevent global scrolling

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,4 +68,5 @@
 body {
     /* background-color: #EFF4FF; */
     background-color: #E6E3E7;
+    overflow: hidden;
 }
